# duratypes

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: parse_duration.py
docs/: api.md  behavior.md  contributing.md  design.md  errors.md  index.md  installation.md  integrations.md  pydantic.md  quickstart.md  release.md  roadmap.md
docs/decisions/: 0001-store-durations-as-seconds.md
examples/: fastapi_config.py  fastapi_timeout.py  faststream_headers.py  pydantic_ai_budget.py  pydantic_graph_timeout_guard.py  pydantic_settings.py  retry_policy.py  taskiq_retry_policy.py
src/duratypes/: __init__.py  core.py
src/duratypes/integrations/: __init__.py  fastapi.py  faststream.py  pydantic_ai.py  pydantic_graph.py  taskiq.py
tests/: test_core.py  test_duration_types.py  test_fastapi_integration.py  test_faststream_integration.py  test_pydantic_ai_integration.py  test_pydantic_graph_integration.py  test_pydantic_integration.py  test_serialization.py  test_taskiq_integration.py
